# elytra-component

./: .editorconfig  .gitattributes  .gitignore  README.md  main.py  pyproject.toml
elytra_component/honeybee/: __init__.py  _warning.py
elytra_component/honeybee/core/: config.py  typing.py
elytra_component/honeybee/energy/: __init__.py  config.py  result.py  typing.py
elytra_component/honeybee/energy/simulation/: __init__.py  parameters.py  paramters.py  run.py
elytra_component/honeybee/radiance/: __init__.py  config.py  metrics.py  schedule.py  sources.py  typing.py  utils.py
elytra_component/honeybee/radiance/results/: __init__.py  annual.py  common.py  pit.py
elytra_component/honeybee/radiance/simulation/: __init__.py  parameters.py  run.py
elytra_component/ladybug/: config.py  importers.py  typing.py  utils.py
elytra_component/ladybug/analysis/: __init__.py  sun_hours.py
elytra_component/ladybug/array/: __init__.py  geometry.py
elytra_component/ladybug/data/: __init__.py  analyzation.py  calculation.py  collection.py  converters.py  sun.py  temporal.py  weather.py
elytra_component/ladybug/io/: __init__.py  weather.py
elytra_component/ladybug/visualization/: __init__.py  _matplotlib.py  config.py  hourly.py  monthly.py  psychrometric.py  sunpath.py  wind.py
example/model/: baseline.hbjson
example/weather/USA_CA_San_Francisco/: USA_CA_San.Francisco-Presidio.994016_TMYx.clm  USA_CA_San.Francisco-Presidio.994016_TMYx.ddy  USA_CA_San.Francisco-Presidio.994016_TMYx.epw  USA_CA_San.Francisco-Presidio.994016_TMYx.pvsyst  USA_CA_San.Francisco-Presidio.994016_TMYx.rain  USA_CA_San.Francisco-Presidio.994016_TMYx.stat  USA_CA_San.Francisco-Presidio.994016_TMYx.wea
tests/: conftest.py  test_energy_simulation.py  test_radiance_simulation.py
