[project]
name = "elytra-component"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "honeybee-core>=1.64.47",
    "ladybug-comfort>=0.18.117",
    "ladybug-core>=0.44.49,<0.45",
    "matplotlib>=3.10.0",
    "numba>=0.65.1",
    "numpy>=2.2.0",
    "tqdm>=4.68.2",
]
