[project]
name = "elytra-component"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy==1.26.4",
    "matplotlib==3.10.9",
    "tqdm>=4.68,<5",
    "ladybug-core==0.44.49",
    "ladybug-geometry==1.34.27",
    "ladybug-comfort==0.18.117",
    "honeybee-core==1.64.47",
    "honeybee-energy[openstudio]==1.121.2",
    "openstudio==3.10.0",
    "honeybee-radiance==1.66.264",
    "lbt-recipes==0.27.5",
]
