[project]
name = "elytra-component"
version = "0.1.0"
description = "Modern Python workflow helpers for Honeybee Energy and Radiance simulations."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy==1.26.4",
    "tqdm>=4.68,<5",
    "ladybug-core==0.44.49",
    "ladybug-geometry==1.34.27",
    "ladybug-comfort==0.18.117",
    "honeybee-core==1.64.47",
    "honeybee-energy[openstudio]==1.121.2",
    "openstudio==3.10.0",
    "honeybee-radiance==1.66.264",
    "lbt-recipes==0.27.5",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pyright>=1.1.407",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
markers = [
    "engine: tests that require OpenStudio, EnergyPlus, or Radiance binaries",
    "slow: tests that run an external simulation engine",
]

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"
